# faspxx

./: .clang-format  .gitignore  CMakeLists.txt  README.md  VecCluster.cxx  VecCluster.hxx  faspxx.hxx  m.cxx  main.cxx  mc.cxx
.github/workflows/: CompileTestDebug.yml
backup/: AMG.cxx  AMG.hxx  TG.hxx
data/: input.param  multiple.param  multiple_sol.opts  nos7-.mtx  params_for_testCG.opts  single.param
doc/: Doxyfile.cnf
doc/html/: _a_m_g_8hxx_source.html  _bi_c_g_stab_8hxx.html  _bi_c_g_stab_8hxx_source.html  _c_g_8cxx.html  _c_g_8hxx.html  _c_g_8hxx_source.html  _error_log_8hxx.html  _error_log_8hxx_source.html  _f_g_m_r_e_s_8cxx.html  _f_g_m_r_e_s_8hxx.html  _f_g_m_r_e_s_8hxx_source.html  _g_m_r_e_s_8cxx.html  _g_m_r_e_s_8hxx.html  _g_m_r_e_s_8hxx_source.html  _iter_8cxx.html  _iter_8hxx.html  _iter_8hxx_source.html  _krylov_8cxx.html  _krylov_8hxx.html  _krylov_8hxx_source.html  _l_o_p_8cxx.html  _l_o_p_8hxx.html  _l_o_p_8hxx_source.html  _m_a_t_8cxx.html  _m_a_t_8hxx.html  _m_a_t_8hxx_source.html  _m_a_t_util_8cxx.html  _m_a_t_util_8hxx.html  _m_a_t_util_8hxx_source.html  _m_g_8cxx.html  _m_g_8hxx_source.html  _p_c_d_8hxx_source.html  _p_c_g_8cxx.html  _p_c_g_8hxx.html  _p_c_g_8hxx_source.html  _param_8cxx.html  _param_8hxx.html  _param_8hxx_source.html  _parameters_8hxx_source.html  _poisson2_d_8hxx.html  (+106 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  (+80 more)
docs/: AMG_8cxx.html  AMG_8cxx_source.html  AMG_8hxx.html  AMG_8hxx_source.html  BiCGStab_8cxx.html  BiCGStab_8cxx_source.html  BiCGStab_8hxx.html  BiCGStab_8hxx_source.html  CG_8cxx.html  CG_8cxx_source.html  CG_8hxx.html  CG_8hxx_source.html  Doxygen_8hxx.html  Doxygen_8hxx_source.html  ErrorLog_8hxx.html  ErrorLog_8hxx_source.html  FGMRES_8cxx.html  FGMRES_8cxx_source.html  FGMRES_8hxx.html  FGMRES_8hxx_source.html  Faspxx_8hxx.html  Faspxx_8hxx_source.html  GMRES_8cxx.html  GMRES_8cxx_source.html  GMRES_8hxx.html  GMRES_8hxx_source.html  Iter_8cxx.html  Iter_8cxx_source.html  Iter_8hxx.html  Iter_8hxx_source.html  Krylov_8cxx.html  Krylov_8cxx_source.html  Krylov_8hxx.html  Krylov_8hxx_source.html  LOP_8cxx.html  LOP_8cxx_source.html  LOP_8hxx.html  LOP_8hxx_source.html  MATUtil_8cxx.html  MATUtil_8cxx_source.html  (+243 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  (+74 more)
example/: Aux_testMatFree.hxx  CMakeLists.txt  Poisson2D.hxx  TestCG.cxx  TestGMRES.cxx  TestInverse.cxx  TestJacobi.cxx  TestKrylov.cxx  TestMG.cxx  TestPCG.cxx  TestReadData.cxx  TestSolver.cxx  TestVecSpeed.cxx  TestWeightedJacobi.cxx  VECSpeedCompare.cxx  compareReadMat.cpp  demo.cxx  testALL.cxx  testAMG.cxx  testBiCGStab.cxx  testCG.cxx  testError.cxx  testErrorCode.cxx  testErrorLog.cxx  testGMRES.cxx  testInverse.cxx  testJacobi.cxx  testKrylov.cxx  testMAT.cxx  testMG.cxx  testMatFree.cxx  testPCG.cxx  testReadData.cxx  testSOL.cxx  testSolver.cxx  testVEC.cxx  testVecSpeed.cxx  testWeightJacobi.cxx  testWeightedJacobi.cxx
fanronghong/: array.cpp  array.hpp
include/: Faspxx.hxx  cyclecount.hxx  error.hxx  faspxx.hxx  timing.hxx
log/: TODO
manual/: Doxyfile.cnf  FaspxxFramework.pptx  FaspxxPlan.md  GTEST.md
modules/: UserCmakeUtilities.cmake  external.cmake  install_prefix.cmake
src/: AMG.cxx  AMG.hxx  BiCGStab.cxx  BiCGStab.hxx  CG.cxx  CG.hxx  CMakeLists.txt  Doxygen.hxx  Error.hxx  ErrorLog.hxx  FGMRES.cxx  FGMRES.hxx  Faspxx.hxx  FreeMat.hxx  GMRES.cxx  GMRES.hxx  Gmres.hxx  Iter.cxx  Iter.hxx  Krylov.cxx  Krylov.hxx  LOP.cxx  LOP.hxx  MAT.cxx  MAT.hxx  MATUtil.cxx  MATUtil.hxx  MG.cxx  MG.hxx  PCD.cxx  PCD.hxx  PCG.cxx  PCG.hxx  ParVEC.cxx  ParVEC.hxx  Param.cxx  Param.hxx  Parameters.cxx  Parameters.hxx  Print.cxx  (+51 more)
src/include/: errortype.hxx  fasp++.hxx  mat.cxx  mat.hxx  vec.cxx  vec.hxx
src/linalg/: vector.cpp  vector.hpp
src/test/: Makefile  test.cxx  vec.cxx  vec.hxx
src/tmp/: demo.cxx
test/: gtest_examples.cxx  testErrorCode.cxx  testGoogle.cxx  testGoogleTest.cxx  testMAT.cxx  testVEC.cxx  testVecSpeed.cxx  testVector.cxx
tests/: CMakeLists.txt  Makefile  README.md  demo.cxx  gtest_examples.cpp  speedtest.cxx  testErrorCode.cxx  tests_main.cpp  unit_tests.cxx
tests/data/: single_sol.param
tests/src/: UnitTestsErrorLog.cxx  UnitTestsParVEC.cxx  UnitTestsParam.cxx  UnitTestsVEC.cxx  test_ErrorLog.cxx  test_Jacobi.cxx  test_MAT.cxx  test_Param.cxx  test_VEC.cxx
utest/: CMakeLists.txt  README.md  UnitTests.cxx  unitErrorLog.cxx  unitGTest.cxx  unitGTestAll.cxx  unitJacobi.cxx  unitMAT.cxx  unitParam.cxx  unitVEC.cxx
utest/data_for_test/: single_sol.opts
utest/src/: UnitTestsJacobi.cxx  UnitTestsMAT.cxx
zkl/: VEC.hxx  cplusfile  dMatrix.hxx  demo.cxx  errorcode.hxx  faspxx.hxx  mat.cxx  new_pav.cxx  newer_pav.cxx  vec.cxx  vec.hxx
zkl/local/: errortype.hxx  vec.cxx
zkl/matrix/: MAT.cxx
zkl/test/: ConvertCSR.cxx  constructor1.cxx  func.cxx  mat.hxx  operator=.cxx  vec.cxx  vec.hxx
zkl/tmp/: CMakeLists.txt  de  demo.cxx  fasp++.hxx  iterator.cpp  mat.cxx  test.cpp  testvec.cpp  walltime.hxx
zkl/tmp/code.old/: Makefile  PCG.hxx.old  dVector.h  dVector.hxx  fasperrortype.h  fasttest.cxx  new1.cxx  pav.cxx.old  test.cpp  testvec.cpp
zkl/tmp/local/: vec.hxx
zkl/tmp/local2/: vec.cxx  vec.hxx
